--- a/index.html
+++ b/index.html
@@ -1,47 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>AI Rewrite & Translate</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>AI Rewrite & Translate Tool</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      padding: 2rem;
-      background: #f7f7f7;
+      font-family: 'Segoe UI', sans-serif;
+      background: #eef2f7;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      justify-content: center;
     }
+
+    .container {
+      max-width: 600px;
+      width: 90%;
+      margin-top: 50px;
+      background: #ffffff;
+      padding: 2rem;
+      border-radius: 12px;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.1);
+    }
+
+    h2 {
+      text-align: center;
+      margin-bottom: 1.5rem;
+      color: #333;
+    }
+
     textarea {
       width: 100%;
-      height: 100px;
-      margin-bottom: 1rem;
-    }
-    button {
-      padding: 10px 15px;
-      margin-right: 10px;
-      font-size: 16px;
-    }
-    .output {
-      margin-top: 1rem;
-      background: #fff;
+      height: 120px;
       padding: 1rem;
-      border-radius: 5px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      font-size: 16px;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+      resize: vertical;
+    }
+
+    .btn-group {
+      display: flex;
+      justify-content: center;
+      margin-top: 1rem;
+      gap: 1rem;
+    }
+
+    button {
+      padding: 10px 20px;
+      font-size: 16px;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: background 0.3s ease;
+    }
+
+    button:hover {
+      opacity: 0.9;
+    }
+
+    .rewrite-btn {
+      background-color: #007bff;
+      color: white;
+    }
+
+    .translate-btn {
+      background-color: #28a745;
+      color: white;
+    }
+
+    .output {
+      margin-top: 2rem;
+      padding: 1rem;
+      background: #f9f9f9;
+      border-left: 4px solid #007bff;
+      border-radius: 8px;
+      min-height: 50px;
+      white-space: pre-wrap;
+    }
+
+    .loading {
+      text-align: center;
+      font-style: italic;
+      color: #999;
+    }
+
+    @media (max-width: 500px) {
+      .btn-group {
+        flex-direction: column;
+      }
+      button {
+        width: 100%;
+      }
     }
   </style>
 </head>
 <body>
 
-  <h2>AI Rewrite & Translate Tool</h2>
+  <div class="container">
+    <h2>AI Rewrite & Translate Tool</h2>
 
-  <textarea id="inputText" placeholder="Enter your text here..."></textarea><br>
+    <textarea id="inputText" placeholder="Type your sentence or Arabic phrase here..."></textarea>
 
-  <button onclick="sendPrompt('rewrite')">Rewrite with AI</button>
-  <button onclick="sendPrompt('translate')">Translate</button>
+    <div class="btn-group">
+      <button class="rewrite-btn" onclick="sendPrompt('rewrite')">Rewrite with AI</button>
+      <button class="translate-btn" onclick="sendPrompt('translate')">Translate</button>
+    </div>
 
-  <div class="output" id="output"></div>
+    <div class="output" id="output">Output will appear here...</div>
+  </div>
 
   <script>
     async function sendPrompt(type) {
       const input = document.getElementById('inputText').value.trim();
+      const outputDiv = document.getElementById('output');
+
       if (!input) {
         alert('Please enter some text.');
         return;
@@ -54,23 +128,20 @@
         promptText = `Translate text ${input} to English. Only give answer.`;
       }
 
-      const responseArea = document.getElementById('output');
-      responseArea.innerText = 'Loading...';
+      outputDiv.innerHTML = '<div class="loading">⏳ Please wait...</div>';
 
       try {
         const response = await fetch('https://v354f29kg7.execute-api.us-east-1.amazonaws.com/dev/ask', {
           method: 'POST',
-          headers: {
-            'Content-Type': 'application/json'
-          },
+          headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify({ prompt: promptText })
         });
 
         const data = await response.json();
-        responseArea.innerText = data.answer || JSON.stringify(data);
+        outputDiv.innerText = data.answer || 'No response from AI.';
       } catch (error) {
         console.error(error);
-        responseArea.innerText = 'Error calling the API.';
+        outputDiv.innerText = '❌ Error calling the API.';
       }
     }
   </script>
