--- a/index.html
+++ b/index.html
@@ -2,149 +2,103 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>AI Rewrite & Translate Tool</title>
+  <title>AI Rewriter & Translator</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <!-- Bootstrap CSS -->
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+  />
+  <link rel="icon" href="data:," />
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
-      background: #eef2f7;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      justify-content: center;
+      background: #f4f7f9;
     }
-
     .container {
-      max-width: 600px;
-      width: 90%;
-      margin-top: 50px;
-      background: #ffffff;
-      padding: 2rem;
-      border-radius: 12px;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.1);
+      max-width: 700px;
+      margin-top: 80px;
+      padding: 30px;
+      background: white;
+      border-radius: 16px;
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
     }
-
-    h2 {
-      text-align: center;
-      margin-bottom: 1.5rem;
-      color: #333;
-    }
-
     textarea {
-      width: 100%;
-      height: 120px;
-      padding: 1rem;
-      font-size: 16px;
-      border-radius: 8px;
-      border: 1px solid #ccc;
       resize: vertical;
     }
-
-    .btn-group {
-      display: flex;
-      justify-content: center;
-      margin-top: 1rem;
-      gap: 1rem;
-    }
-
-    button {
-      padding: 10px 20px;
-      font-size: 16px;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      transition: background 0.3s ease;
-    }
-
-    button:hover {
-      opacity: 0.9;
-    }
-
-    .rewrite-btn {
-      background-color: #007bff;
-      color: white;
-    }
-
-    .translate-btn {
-      background-color: #28a745;
-      color: white;
-    }
-
-    .output {
-      margin-top: 2rem;
-      padding: 1rem;
-      background: #f9f9f9;
-      border-left: 4px solid #007bff;
-      border-radius: 8px;
-      min-height: 50px;
+    #output {
       white-space: pre-wrap;
     }
-
-    .loading {
-      text-align: center;
-      font-style: italic;
-      color: #999;
-    }
-
-    @media (max-width: 500px) {
-      .btn-group {
-        flex-direction: column;
-      }
-      button {
-        width: 100%;
-      }
+    .btn {
+      width: 48%;
     }
   </style>
 </head>
 <body>
-
   <div class="container">
-    <h2>AI Rewrite & Translate Tool</h2>
+    <h2 class="text-center mb-4">AI Rewriter & Translator</h2>
 
-    <textarea id="inputText" placeholder="Type your sentence or Arabic phrase here..."></textarea>
-
-    <div class="btn-group">
-      <button class="rewrite-btn" onclick="sendPrompt('rewrite')">Rewrite with AI</button>
-      <button class="translate-btn" onclick="sendPrompt('translate')">Translate</button>
+    <div class="mb-3">
+      <label for="inputText" class="form-label">Enter your text:</label>
+      <textarea
+        class="form-control"
+        id="inputText"
+        rows="4"
+        placeholder="Type something..."
+      ></textarea>
     </div>
 
-    <div class="output" id="output">Output will appear here...</div>
+    <div class="d-flex justify-content-between mb-3">
+      <button class="btn btn-primary" onclick="rewriteText()">✍️ Rewrite with AI</button>
+      <button class="btn btn-success" onclick="translateText()">🌐 Translate</button>
+    </div>
+
+    <div id="output" class="alert alert-secondary" role="alert">
+      Output will appear here...
+    </div>
   </div>
 
   <script>
-    async function sendPrompt(type) {
-      const input = document.getElementById('inputText').value.trim();
-      const outputDiv = document.getElementById('output');
+    const proxy = "https://api.codetabs.com/v1/proxy?quest=";
+    const apiUrl = "https://v354f29kg7.execute-api.us-east-1.amazonaws.com/dev/ask";
 
-      if (!input) {
-        alert('Please enter some text.');
-        return;
-      }
-
-      let promptText = '';
-      if (type === 'rewrite') {
-        promptText = `Rewrite the statement - ${input}`;
-      } else if (type === 'translate') {
-        promptText = `Translate text ${input} to English. Only give answer.`;
-      }
-
-      outputDiv.innerHTML = '<div class="loading">⏳ Please wait...</div>';
+    async function callAPI(promptText) {
+      const outputDiv = document.getElementById("output");
+      outputDiv.innerText = "⏳ Processing...";
 
       try {
-        const response = await fetch('https://v354f29kg7.execute-api.us-east-1.amazonaws.com/dev/ask', {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify({ prompt: promptText })
+        const response = await fetch(proxy + encodeURIComponent(apiUrl), {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json",
+          },
+          body: JSON.stringify({ prompt: promptText }),
         });
 
+        if (!response.ok) {
+          throw new Error(`Status: ${response.status}`);
+        }
+
         const data = await response.json();
-        outputDiv.innerText = data.answer || 'No response from AI.';
+        outputDiv.innerText = `✅ ${data.answer || "No response."}`;
       } catch (error) {
-        console.error(error);
-        outputDiv.innerText = '❌ Error calling the API.';
+        outputDiv.innerText = `❌ Error calling the API:\n${error.message}`;
+        console.error("API Error:", error);
       }
     }
-  </script>
 
+    function rewriteText() {
+      const inputText = document.getElementById("inputText").value.trim();
+      if (!inputText) return alert("Please enter some text.");
+      const prompt = `Rewrite the statement - ${inputText}`;
+      callAPI(prompt);
+    }
+
+    function translateText() {
+      const inputText = document.getElementById("inputText").value.trim();
+      if (!inputText) return alert("Please enter some text.");
+      const prompt = `Translate text ${inputText} to English. Only give answer.`;
+      callAPI(prompt);
+    }
+  </script>
 </body>
 </html>
