--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   </div>
 
   <script>
-  const proxy = "https://cors-anywhere.herokuapp.com/"; // Use CORS Anywhere proxy
+const proxy = "https://api.allorigins.win/get?url=";
 const apiUrl = "https://v354f29kg7.execute-api.us-east-1.amazonaws.com/dev/ask";
 
 async function callAPI(promptText) {
@@ -66,7 +66,7 @@ async function callAPI(promptText) {
   outputDiv.innerText = "⏳ Processing...";
 
   try {
-    const response = await fetch(proxy + apiUrl, {
+    const response = await fetch(proxy + encodeURIComponent(apiUrl), {
       method: "POST",
       headers: {
         "Content-Type": "application/json",
