--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@ async function callAPI(promptText) {
       method: "POST",
       headers: {
         "Content-Type": "application/json",
+        "Access-Control-Allow-Origin": "*",
+    "Access-Control-Allow-Headers": "Content-Type"
       },
       body: JSON.stringify({ prompt: promptText }),
     });
