--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <button class="btn btn-success" onclick="translateText()">🌐 Translate</button>
     </div>
 
-    <div id="output" class="alert alert-secondary" role="alert"> Waiting..
+    <div id="output" class="alert alert-secondary" role="alert"> Waiting...
     </div>
   </div>
 
