--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ outputDiv.innerText = `✅ ${data.response ? "Success" : "No response."}`;
             console.log(' DATA : '+data.body);
             console.log(' BODY : '+parsedBody);
             console.log(' BODY DETAILS: '+parsedBody.answer);
-            inputQuery.value    = parsedBody.answer || "";
+            inputField.value    = parsedBody.answer || "";
             outputDiv.innerText = `✅ ${parsedBody.answer ? "Success" : "No response."}`;
 
 
