--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       ></textarea>
     </div>
     <div class="d-flex justify-content-between mb-3">
-      <button class="btn btn-primary" onclick="rewriteTextNew()">✍️ Rewrite with AI - New</button>
+      <button class="btn btn-primary" onclick="rewriteTextNew()">✍️ AI Chatbot</button>
     </div>
     <div class="d-flex justify-content-between mb-3">
       <button class="btn btn-primary" onclick="rewriteText()">✍️ Rewrite with AI</button>
